chore(idea): 更新 compiler.xml